--- a/package.json
+++ b/package.json
@@ -24,30 +24,27 @@
         "Angular 5",
         "Angular 6",
         "Angular 7",
-        "angular.io"
+        "angular.io",
+        "Akiry"
     ],
     "extensionPack": [ 
-        "UVBrain.Angular2",
-        "johnpapa.Angular2",
+        "alexiv.vscode-angular2-files",
         "Angular.ng-template",
-        "1tontech.angular-material",
-        "steoates.autoimport",
-        "formulahendry.auto-rename-tag",
-        "formulahendry.auto-close-tag",
-        "abusaidm.html-snippets",
-        "NG-42.ng-fortytwo-vscode-extension",
-        "infinity1207.angular2-switcher",
-        "AngularDoc.angulardoc-vscode",
-        "SimonTest.simontest",
-        "EditorConfig.EditorConfig",
-        "GregorBiswanger.json2ts",
-        "MarinhoBrandao.Angular2Tests",
-        "msjsdiag.debugger-for-chrome",
-        "esbenp.prettier-vscode",
-        "eg2.tslint",
         "christian-kohler.path-intellisense",
-        "rbbit.typescript-hero",
-        "stringham.move-ts",
-        "cyrilletuzi.angular-schematics"
+        "eamodio.gitlens",
+        "eg2.tslint",
+        "robinbentley.sass-indented",
+        "glen-84.sass-lint",
+        "HookyQR.beautify",
+        "infinity1207.angular2-switcher",
+        "msjsdiag.debugger-for-chrome",
+        "nsoult.typescript-imports-sort",
+        "PeterJausovec.vscode-docker",
+        "steoates.autoimport",
+        "wayou.vscode-todo-highlight",
+        "robertohuertasm.vscode-icons",
+        "mrmlnc.vscode-scss",
+        "Zignd.html-css-class-completion",
+        "formulahendry.auto-rename-tag"
     ]
 }
